fix(tabs): add dark mode variables

--- a/tegel/src/components/tabs/inline-tabs-fullbleed/inline-tabs-fullbleed-theme-vars.scss
+++ b/tegel/src/components/tabs/inline-tabs-fullbleed/inline-tabs-fullbleed-theme-vars.scss
@@ -1,7 +1,10 @@
 :root,
 .sdds-theme-light {
   /* Horizontal divider */
-  --sdds-inline-tabs-fullbleed-horizontal-divider-bg: var(--sdds-grey-300);
+  --sdds-inline-tabs-fullbleed-horizontal-divider-bg: var(--sdds-blue-900);
+  --sdds-inline-tabs-fullbleed-horizontal-divider-opacity: 0.16;
+  --sdds-inline-tabs-fullbleed-tab-bg-primary: var(--sdds-white);
+  --sdds-inline-tabs-fullbleed-tab-bg-secondary: var(--sdds-grey-50);
 
   /* Scroll button */
   --sdds-inline-tabs-fullbleed-scroll-btn-bg: var(--sdds-grey-50);
@@ -9,7 +12,10 @@
   --sdds-inline-tabs-fullbleed-scroll-btn-active-bg: var(--sdds-grey-400);
 
   /* Tab */
-  --sdds-inline-tabs-fullbleed-tab-hover-indicator-bg: var(--sdds-grey-400);
+  --sdds-inline-tabs-fullbleed-tab-color: var(--sdds-grey-900);
+  --sdds-inline-tabs-fullbleed-tab-color-disabled: var(--sdds-blue-900);
+  --sdds-inline-tabs-fullbleed-tab-color-disabled-opacity: 0.60;
+  --sdds-inline-tabs-fullbleed-tab-hover-indicator-bg: #D1D5DB;
   --sdds-inline-tabs-fullbleed-tab-hover-color: var(--sdds-grey-958);
   --sdds-inline-tabs-fullbleed-tab-focus-color: var(--sdds-grey-958);
   --sdds-inline-tabs-fullbleed-tab-active-color: var(--sdds-grey-958);
@@ -17,5 +23,23 @@
 }
 
 .sdds-theme-dark {
-  //todo
+  --sdds-inline-tabs-fullbleed-horizontal-divider-bg: var(--sdds-blue-100);
+  --sdds-inline-tabs-fullbleed-horizontal-divider-opacity: 0.24;
+  --sdds-inline-tabs-fullbleed-tab-bg-primary: var(--sdds-grey-900);
+  --sdds-inline-tabs-fullbleed-tab-bg-secondary: var(--sdds-grey-846);
+
+  /* Scroll button */
+  --sdds-inline-tabs-fullbleed-scroll-btn-bg: var(--sdds-grey-800);
+  --sdds-inline-tabs-fullbleed-scroll-btn-hover-bg: var(--sdds-grey-900);
+  --sdds-inline-tabs-fullbleed-scroll-btn-active-bg: var(--sdds-grey-900);
+
+  /* Tab */
+  --sdds-inline-tabs-fullbleed-tab-color: var(--sdds-blue-50);
+  --sdds-inline-tabs-fullbleed-tab-color-disabled: var(--sdds-blue-50);
+  --sdds-inline-tabs-fullbleed-tab-color-disabled-opacity: 0.38;
+  --sdds-inline-tabs-fullbleed-tab-hover-indicator-bg: var(--sdds-blue-100);
+  --sdds-inline-tabs-fullbleed-tab-hover-color: var(--sdds-grey-50);
+  --sdds-inline-tabs-fullbleed-tab-focus-color: var(--sdds-grey-50);
+  --sdds-inline-tabs-fullbleed-tab-active-color: var(--sdds-grey-50);
+  --sdds-inline-tabs-fullbleed-tab-active-indicator-bg: var(--sdds-blue-300);
 }
